objects/DMAPP__DM_Qualifier__c.object
<CustomObject>
    <description>ADMIN ONLY DATA CONFIG

This object is responsible for the maintenance of the Qualifiers used by Playbook. They can be maintained from the Playbook Admin App.</description>
    <fields>
        <fullName>DMAPP__DealmakerID__c</fullName>
        <description>An external ID used for Dealmaker</description>
        <externalId>true</externalId>
        <label>DealmakerID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>DMAPP__Question__c</fullName>
        <description>The qualifier text displayed to the user when working an opportunity through the sales process</description>
        <inlineHelpText>The text for the qualifier / verifiable outcome, displayed to the user on the &quot;Sales Process&quot; tab in Dealmaker.

To progress an opportunity through the pipeline, the user sets the status on the qualifiers associated with each stage in the sales process.</inlineHelpText>
        <label>Qualifier Longname</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DMAPP__Tip__c</fullName>
        <inlineHelpText>The help text associated with the qualifier / verifiable outcome. 

Use this section to provide instructions to the user on what the question is asking them to focus on, what steps they should take and/or what details they should provide in the comments</inlineHelpText>
        <label>Tip</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DMAPP__UI_Readonly__c</fullName>
        <defaultValue>false</defaultValue>
        <description>A Smart Qualifier cannot be set by a user on the playbook UI screen. 
It is anticipated that these qualifiers will be set by other means (triggers etc)</description>
        <inlineHelpText>A Smart Qualifier cannot be set by a user on the playbook UI screen. 
It is anticipated that these qualifiers will be set by other means (triggers etc)</inlineHelpText>
        <label>Smart Qualifier</label>
        <type>Checkbox</type>
    </fields>
    <label>Playbook Qualifier</label>
    <listViews>
        <fullName>DMAPP__All</fullName>
        <columns>NAME</columns>
        <columns>DMAPP__Question__c</columns>
        <columns>DMAPP__Tip__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Qualifier Shortname</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Playbook Qualifiers</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>